# homework_10.1

./: .coverage  .env.example  README.md  mypy.ini  pyproject.toml
generators/: transactions.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6_decorators_py.html  z_145eef247bfb46b6_external_api_py.html  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_utils_py.html  z_145eef247bfb46b6_widget_py.html
src/: data_loader.py  decorators.py  external_api.py  generators.py  logger.py  main.py  masks.py  operations.py  processing.py  utils.py  widget.py
tests/: test_data_loader.py  test_decorators.py  test_external_api.py  test_generators.py  test_logger.py  test_main.py  test_masks.py  test_operations.py  test_processing.py  test_transactions.py  test_utils.py  test_widget.py
