[tool.poetry]
name = "homework-10-1"
version = "0.1.0"
description = ""
authors = ["Vlada Vasilevna <vladusik-home@mail.ru>"]
readme = "README.md"
packages = [{include = "homework_10"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
